# ROS2-Project3

./: my_robot.urdf
src/Riot_V3/: CMakeLists.txt  package.xml
src/Riot_V3/Riot_bot/config/: joint_names_Riot_V3.yaml
src/Riot_V3/Riot_bot/urdf/: Riot_V3.csv  waffle.urdf
src/Riot_V3/launch/: riotsim_rviz.launch.py  world.launch.py
src/Riot_V3/meshes/: back_left_Link.STL  back_right_Link.STL  base_link.STL  camera.STL  front_left_Link.STL  front_right_Link.STL  hokuyo.STL
src/Riot_V3/rviz/: urdf_config.rviz
src/Riot_V3/urdf/: riot.gazebo  riot.urdf  riot.urdf.xacro
src/Riot_V3/worlds/: riot_level5.world  waffle.model
